# RhombusEnd2End

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Rhombus/: CMakeLists.txt
Rhombus/Rhombus/: CMakeLists.txt  matmul.cpp  matmul.h  matmul_protocol.cpp  matmul_protocol.h  matrix.cpp  matrix.h  matvec.cpp  matvec.h  parameters.h  ring_op.h  seal_api.cpp  seal_api.h  status.cpp  status.h  statusor.h
Rhombus/test/: CMakeLists.txt  test_rhombus_matmul.cpp  test_rhombus_matvec.cpp
SCI/networks/: main_resnet32_cifar.cpp
SCI/src/: globals.cpp  globals.h  library_fixed_uniform.cpp  library_fixed_uniform.h  library_fixed_uniform_cheetah.cpp
SCI/src/BuildingBlocks/: aux-protocols.cpp  truncation.cpp
SCI/src/Math/: math-functions.cpp  math-functions.h
SCI/src/cheetah/: CMakeLists.txt
SCI/src/utils/: mitccrh.h  utils.h
SCI/tests/: CMakeLists.txt
networks/: main_resnet50.cpp  main_vgg11.cpp
scripts/: build-deps.sh  build.sh  run-client.sh  run-server.sh
